--- a/config/user_config.ini
+++ b/config/user_config.ini
@@ -15,7 +15,7 @@ open_update_time = True
 open_service = True
 
 # 源功能配置
-open_hotel = True
+open_hotel = False
 open_hotel_foodie = True
 open_hotel_fofa = False
 open_local = True
@@ -33,7 +33,7 @@ open_supply = True
 open_use_cache = True
 open_history = True
 open_headers = False
-open_url_info = True
+open_url_info = False
 
 # 网络配置（适合Docker）
 #app_host = http://0.0.0.0
@@ -41,32 +41,32 @@ open_url_info = True
 #cdn_url =
 
 # 数量控制配置
-hotel_num = 15
-local_num = 15
-multicast_num = 15
-subscribe_num = 15
+hotel_num = 5
+local_num = 10
+multicast_num = 10
+subscribe_num = 10
 online_search_num = 0
 urls_limit = 8
 
 # 分页配置
-hotel_page_num = 2
+hotel_page_num = 1
 multicast_page_num = 2
 online_search_page_num = 1
 
 # 地区配置
-hotel_region_list = 全部
-multicast_region_list = 全部
+hotel_region_list = 江苏
+multicast_region_list = 江苏
 
 # 网络类型配置
 ipv_type = 全部
 ipv_type_prefer = ipv4
-ipv4_num =
-ipv6_num =
-ipv6_support = True
+ipv4_num = 5
+ipv6_num = 5
+ipv6_support = False
 
 # 过滤条件配置
 isp =
-location =
+location = 江苏
 min_resolution = 1280x720
 max_resolution = 1920x1080
 min_speed = 1.0
@@ -76,12 +76,12 @@ recent_days = 15
 request_timeout = 15
 speed_test_limit = 8
 speed_test_timeout = 12
-speed_test_filter_host = True
+speed_test_filter_host = False
 
 # 来源偏好配置
-origin_type_prefer = local,subscribe,hotel,multicast
+origin_type_prefer = local,subscribe,multicast,hotel
 
 # 时间配置
 time_zone = Asia/Shanghai
-update_interval = 6
-update_time_position = top
+update_interval = 12
+update_time_position = bottom
