--- a/config/user_config.ini
+++ b/config/user_config.ini
@@ -66,7 +66,7 @@ ipv6_support = False
 
 # 过滤条件配置
 isp =
-location = 江苏
+location = 全部
 min_resolution = 1280x720
 max_resolution = 1920x1080
 min_speed = 1.0
