--- a/config/user_config.ini
+++ b/config/user_config.ini
@@ -15,7 +15,7 @@ open_update_time = True
 open_service = True
 
 # 源功能配置
-open_hotel = False
+open_hotel = True
 open_hotel_foodie = True
 open_hotel_fofa = False
 open_local = True
