--- a/config/user_config.ini
+++ b/config/user_config.ini
@@ -15,11 +15,11 @@ open_update_time = True
 open_service = True
 
 # 源功能配置
-open_hotel = True
+open_hotel = False
 open_hotel_foodie = True
 open_hotel_fofa = False
 open_local = True
-open_multicast = False
+open_multicast = True
 open_multicast_foodie = True
 open_multicast_fofa = False
 open_online_search = False
@@ -42,8 +42,8 @@ open_url_info = False
 
 # 数量控制配置
 hotel_num = 5
-local_num = 10
-multicast_num = 10
+local_num = 5
+multicast_num = 5
 subscribe_num = 10
 online_search_num = 0
 urls_limit = 8
